fix snackbar content overflow

--- a/StoicDreams.BlazorUI/wwwroot/sd-blazorui.1.1.6.css
+++ b/StoicDreams.BlazorUI/wwwroot/sd-blazorui.1.1.6.css
@@ -469,3 +469,8 @@ pre > code {
 .token.inserted {
 	color: green
 }
+.mud-snackbar-content-message {
+	max-width: 100%;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
